         and https://forum.kodi.tv/showthread.php?tid=307394&pid=2531524

WIP      Implement "Most played MAME machines"

WIP      Implement "Recently played MAME machines"

WIP      Implement "Most played SL ROMs"

WIP      Implement "Recently played SL ROMs"


[B]Advanced Emulator Launcher | version 0.9.4 | xx March 2018[/B]

WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
         Also, this will allow supporting more image types (currently only PNG), manual
         types (currently only PDF) and trailer types (currently MP4 only).

FEATURE  Create an AEL virtual launcher in XML from any AML filter.

FEATURE  Use proper Software List name in "Machines by Software List" filter.

FEATURE  Use proper short name in "Machines by MAME short name" filter.

FEATURE  Clean Render and main machine JSON files. Currently, there are repeated fields on both
         databases like nplayers.

FEATURE  Move flags and plot from the render database to the assets database. Flags are modified
         by the scanner only and plot generated after the scanner. If flags and plot are in
         the asset DB, the ROM cache and hashed DB must be regenerated after the database building
         only and not always like now.

FEATURE  Render PDF manuals consisting of image scans (99% of game manuals are scans of images).
         Thank you very much to i96751414 for allowing use of his PDF reader addon code.
         Have a look at the PDF reader addon https://forum.kodi.tv/showthread.php?tid=187421
         and https://github.com/i96751414/plugin.image.pdfreader
         This initial implementation somewhat works for some PDFs but code can be improved a lot.

FEATURE  Create a hased database for all catalog filter combination. This will require the
         creation of about 5000 json files but will make AEL as fast as possible.

FEATURE  Hashed database for assets, in a similar fashion to the catalog ROM hashed database.
