@@ -112,3 +112,7 @@ AUDIT_STATUS_ROM_BAD_SIZE   = 'ROM bad size'
 MAME_ROM_EXTS = ['zip']
 MAME_CHD_EXTS = ['chd']
 MAME_SAMPLE_EXTS = ['zip']
+ASSET_ARTWORK_EXTS = ['zip']
+ASSET_MANUAL_EXTS = ['pdf', 'cbz', 'cbr']
+ASSET_TRAILER_EXTS = ['mp4']
+ASSET_IMAGE_EXTS = ['png']
