@@ -18,7 +18,9 @@ WIP      Implement "Recently played SL ROMs"
 
 [B]Advanced Emulator Launcher | version 0.9.4 | xx March 2018[/B]
 
-WIP      Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
+WIP      File cache for SL ROMs/CHDs and assets.
+
+FEATURE  Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
          Also, this will allow supporting more image types (currently only PNG), manual
          types (currently only PDF) and trailer types (currently MP4 only).
 
